[package]
name = "exonum-graphql-service"
version = "0.1.0"
authors = ["Aler Denisov <aler.zampillo@gmail.com>"]
repository = "https://github.com/alerdenisov/exonum-graphql-service"
documentation = "https://github.com/alerdenisov/exonum-graphql-service/wiki"
readme = "README.md"
license = "MIT"
keywords = ["exonum", "blockchain", "api", "graphql", "react", "relay"]
categories = ["service", "api", "helper"]
description = "An Exonum service bootstrap to write graphql based service"

[dependencies]
exonum = { path = "../exonum/exonum" }
clap = "2.14"
tempdir = "0.3.5"
env_logger = "0.3"
log = "0.3"
serde = "1.0.0"
serde_json = "1.0"
serde_derive = "1.0.0"
lazy_static = "0.2.1"
mount = "^0.3.0"
logger = "^0.3.0"

router = "0.5.1"
iron = "0.5.1"
bodyparser = "0.7.0"
params = "0.6.0"

juniper = { version = "0.8.1", features = ["iron-handlers", "expose-test-schema"] }


exonum_bootstrap_proc = { path = "./exonum-bootstrap-proc" }
exonum_bootstrap = { path = "./exonum-bootstrap" }
