[package]
name = "exonum_bootstrap"
version = "0.0.1"
authors = ["Aler Denisov <aler.zampillo@gmail.com>"]
description = "Bunch of proc macroses to bootstrap base Exonum services"
license = "MIT"
repository = "https://github.com/alerdenisov/exonum-graphql"

[dependencies]
exonum = { path = "../../exonum/exonum" }
serde = "1.0.0"
serde_json = "1.0"
serde_derive = "1.0.0"