[package]
name = "derive-new"
version = "0.3.0"
authors = ["Aler Denisov <aler.zampillo@gmail.com>"]
description = "Bunch of proc macroses to bootstrap base Exonum services"
license = "MIT"
repository = "https://github.com/alerdenisov/exonum-graphql"

[lib]
proc-macro = true

[dependencies]
syn = "0.8"
quote = "0.2"